syntax = "proto3";
package robot.user;
option go_package = "github.com/Duke1616/alertmanager-wechat-robot/apps/user";

import "common/pb/github.com/infraboard/mcube/pb/page/page.proto";
import "common/pb/github.com/infraboard/mcube/pb/request/request.proto";

service RPC {
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns(User);
  // 查看用户详情
  rpc DescribeUser(DescribeUserRequest) returns(User);
  // 查看用户信息
  rpc QueryUser(QueryUserRequest) returns(UserSet);
  // 用户登陆验证
  rpc ValidateUser(ValidateRequest) returns(User);
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns(UserSet);
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns(User);
}

enum USER_TYPE {
  // 报警通知用户，不可以登陆
  STAFF = 0;
  // 系统登陆用户
  SYSTEM = 1;
}

message CreateUserRequest {
  // id信息
  // @gotags: bson:"name" json:"name" validate:"required,lte=80"
  string name = 1;
  // id信息
  // @gotags: bson:"password" json:"password" validate:"required,lte=80"
  string password = 2;
  // 用户ID，wechat_id
  // @gotags: bson:"wechat_id" json:"wechat_id"
  string wechat_id = 3;
  // target_names
  // @gotags: bson:"target_ids" json:"target_ids"
  repeated string target_ids = 4;
  // 用户类型
  // @gotags: bson:"user_type" json:"user_type"
  USER_TYPE user_type = 5;
  // 用户详细信息
  // @gotags: bson:"profile" json:"profile"
  Profile profile = 6;
}

message Profile {
  // 电话号
  // @gotags: bson:"phone" json:"phone"
  string phone = 1;
  // 职位
  // @gotags: bson:"position" json:"position"
  string position = 2;
  // 邮箱
  // @gotags: bson:"email" json:"email"
  string email = 3;
}

message User {
  // id信息
  // @gotags: bson:"_id" json:"id"
  string id = 1;
  // 创建时间
  // @gotags: bson:"create_at" json:"create_at"
  int64 create_at = 2;
  // 创建时间
  // @gotags: bson:"update_at" json:"update_at"
  int64 update_at = 3;
  // 详细信息
  // @gotags: bson:"target_names" json:"target_names"
  repeated string target_names  = 4;
  // 详细信息
  // @gotags: bson:"spec" json:"spec"
  CreateUserRequest spec = 5;
}

message UserSet {
  // 总数量
  // @gotags: bson:"total" json:"total"
  int64 total = 1;
  // 数据
  // @gotags: bson:"items" json:"items"
  repeated User items = 2;
}

enum DESCRIBE_BY {
  // 根据用户ID
  ID = 0;
  // 根据企业微信ID
  WECHAT_ID = 1;
  // 根据用户名称
  NAME = 2;
}

message DescribeUserRequest {
  // 查询方式
  // @gotags: json:"describe_by"
  DESCRIBE_BY describe_by = 1;
  // 通过Id查询
  // @gotags: json:"id"
  string id = 2;
  // 通过name查询
  // @gotags: json:"wechat_id"
  string wechat_id = 3;
  // 通过name查询
  // @gotags: json:"name"
  string name = 4;
}

message QueryUserRequest {
  // 分页参数
  // @gotags: json:"page"
  infraboard.mcube.page.PageRequest page = 1;
  // user_ids信息
  // @gotags: json:"user_ids"
  repeated string user_ids = 2;
  // target_names信息
  // @gotags: json:"target_names"
  repeated string target_names = 3;
  // target_ids
  // @gotags: json:"target_ids"
  repeated string target_ids = 4;
}

message ValidateRequest {
  // 用户名称
  // @gotags: json:"name"
  string name = 1;
  // 登陆密码
  // @gotags: json:"password"
  string password = 2;
}

message UpdateUserRequest {
  // 更新模式
  // @gotags: json:"update_mode"
  infraboard.mcube.request.UpdateMode update_mode = 1;
  // 用户Id
  // @gotags: json:"user_id" validate:"required,lte=120"
  string user_id = 2;
  // profile 用户信息
  // @gotags: json:"profile"
  Profile profile = 3;
  // profile 用户信息
  // @gotags: json:"wechat_id"
  string wechat_id = 4;
  // target_id
  // @gotags: bson:"target_ids" json:"target_ids"
  repeated string target_ids = 5;
}

message DeleteUserRequest {
  // 用户账号id
  // @gotags: json:"user_ids" validate:"required,lte=60"
  repeated string user_ids = 2;
}